fix: text-align center bei motto führte zu gemischtem text-align über verschiedene paragraphen hinweg bei kleinen displays

--- a/sass/inhalt/ansprache/_motto.sass
+++ b/sass/inhalt/ansprache/_motto.sass
@@ -4,7 +4,7 @@
 	display: flex
 	flex-direction: column
 	//align-items: center
-	text-align: center
+	//text-align: center
 	padding: var(--padding)
 	p
 		//margin: 0 auto
